# search.catalog-index

./: .gitignore  Gemfile  README.md  compose.yml  docker-compose.yml  prometheus.yml  set_up_development_ssh_keys.sh
.devcontainer/: devcontainer.json
.github/fixtures/: electronic_collections.yaml  libLocInfo.yaml
.github/workflows/: build-main.yml  build-solr.yml  build_on_push.yml  build_sidekiq_monitor.yml  build_support.yml  deploy-catalog-indexer-image-production.yml  deploy-catalog-indexer-image-workshop.yml  deploy-config-to-workshop.yml  deploy-configset-production.yml  deploy-configset-workshop.yml  deploy-production.yaml  deploy-reindexer.yml  scratch.yaml  (+10 more)
api/: Dockerfile  pyproject.toml
api/catalog_api/: entities.py  holdings.py  main.py  marc.py  record.py  sample.py  schemas.py  services.py  solr.py  solr_client.py
api/tests/: test_holdings.py  test_main.py  test_record.py  test_sample.py
api/tests/fixtures/: alma_record.json  land_birds.json  land_birds_marc.json  land_birds_solr.json
biblio/: Dockerfile  Dockerfile.dev  Dockerfile.prod  core.properties  delete_configset.sh  solrconfig_legacy.xml  upload_plugin_repo.sh  zipit.sh
mock-ht/: .env-dev-values  Dockerfile  Gemfile  mock-ht.rb
monitor/: .env-dev-values  Gemfile
overlap/: 02_empty_and_reload_overlap.sh  Dockerfile
sidekiq/: Dockerfile  Gemfile  config.ru
support_dbs/: Dockerfile  Gemfile  sidekiq.rb
umich_catalog_indexing/: .env-dev-values  .env-example  .gitignore  Dockerfile  Dockerfile.prod  Gemfile  README.md  env.development  env.example
xml_to_json/: Dockerfile
(+203 files in other folders)
